--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,17 @@
             android:value="ru.akisterev.theviptatu.MainActivity" /
             -->
         </activity>
+        <activity
+            android:name=".PostDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--
+        android:parentActivityName=".MainActivity"
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="ru.akisterev.theviptatu.MainActivity" /
+            -->
+        </activity>
         <!--
              ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
